# explainable-bug-prediction-workbench

./: .gitignore  README.md
NeuroJIT/: .dockerignore  .gitignore  Dockerfile  README.md  README_PYPI.md  docker-compose.yml  indentation_config.xml  pyproject.toml  reproduce_sh.md
NeuroJIT/data/dataset/baseline/: activemq.csv  (+7 more)
NeuroJIT/data/output/: actionable_random_forest.csv  actionable_xgboost.csv  random_forest_baseline.json  random_forest_combined.json  random_forest_cuf.json  xgboost_baseline.json  xgboost_combined.json  xgboost_cuf.json
NeuroJIT/scripts/: analysis.py  calculate.py  correlation.py  data_utils.py  environment.py  extract_pickles.sh  jit_sdp.py  neurojit_cli.py  pre_analysis.py  reproduce.sh  visualization.py
eval-actionable-guidance-main/: README.md  analysis.py  data_utils.py  evaluate.py  flip_exp.py  hyparams.py  mining_sqa_rules.py  model_evaluations.ipynb  plan_explanations.py  pyproject.toml  run_explainer.py  train_models.py
eval-actionable-guidance-main/Dataset/historical_dataset/: activemq@0.csv  activemq@1.csv  activemq@3.csv  camel@1.csv  derby@1.csv  groovy@1.csv  hbase@1.csv  hive@1.csv  lucene@0.csv  lucene@1.csv  lucene@2.csv  wicket@0.csv  wicket@1.csv
eval-actionable-guidance-main/Explainer/: README.md
eval-actionable-guidance-main/Explainer/SQAPlanner/: LORMIKA.py
eval-actionable-guidance-main/evaluations/: feasibility_cosine.csv  feasibility_mahalanobis.csv  flip_rates.csv
eval-actionable-guidance-main/evaluations/abs_changes/: RF_LIME-HPO.csv  RF_LIME.csv  RF_SQAPlanner.csv  RF_TimeLIME.csv  SVM_LIME-HPO.csv  SVM_LIME.csv  SVM_SQAPlanner.csv  SVM_TimeLIME.csv  XGB_LIME-HPO.csv  XGB_LIME.csv  XGB_SQAPlanner.csv  XGB_TimeLIME.csv
eval-actionable-guidance-main/evaluations/feasibility/: RF_LIME-HPO.csv  RF_LIME.csv  RF_TimeLIME.csv  RandomForest_LIME-HPO.csv  RandomForest_LIME.csv  RandomForest_SQAPlanner.csv  RandomForest_SQAPlanner_confidence.csv  RandomForest_TimeLIME.csv  SVM_LIME-HPO.csv  SVM_LIME.csv  SVM_SQAPlanner.csv  SVM_SQAPlanner_confidence.csv  SVM_TimeLIME.csv  XGB_LIME-HPO.csv  XGB_LIME.csv  XGB_SQAPlanner.csv  XGB_TimeLIME.csv  XGBoost_LIME-HPO.csv  XGBoost_LIME.csv  XGBoost_SQAPlanner.csv  XGBoost_SQAPlanner_confidence.csv  XGBoost_TimeLIME.csv
eval-actionable-guidance-main/model_evaluation/: CatBoost.csv  RandomForest.csv  SVM.csv  XGBoost.csv
(+51989 files in other folders)
