[project]
name = "neurojit"
version = "1.0.2"
description = "A Python package for calculating the commit understandability features of Java projects."
dependencies = [
    "javalang>=0.13.0",
    "pandas>=2.2.1",
    "PyDriller>=2.6",
    "numpy>=1.26.4",
]
readme = "README_PYPI.md"
license = {file = "LICENSE"}
authors = [{ name = "Hansae Ju", email = "sparky@hanyang.ac.kr" }]
requires-python = ">= 3.11"
maintainers = [{ name = "Hansae Ju", email = "sparky@hanyang.ac.kr" }]

[project.urls]
homepage = "https://github.com/Verssae/NeuroJIT"
repository = "https://github.com/Verssae/NeuroJIT"
bug_tracker = "https://github.com/Verssae/NeuroJIT/issues"

[project.optional-dependencies]
replication = [
    "scipy>=1.12.0",
    "cliffs-delta>=1.0.0",
    "scikit-learn>=1.4.1.post1",
    "statsmodels>=0.14.1",
    "imblearn>=0.0",
    "rich>=13.7.1",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
    "xgboost>=2.0.3",
    "lime>=0.2.0.1",
    "typer>=0.12.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/neurojit"]
